Operation "Remove from All Unlinked Collections" removes selected objects from all collections #76014

Closed
opened 2020-04-23 05:01:53 +02:00 by Alaska · 8 comments
Member

System Information:
Operating system: NA
Graphics card: NA

Blender Version:
Broken: Blender 2.83 a68bd94d110a
Worked: Unsure

Short description of error:
Using the keyboard shortcut "Shift-Ctrl-Alt-G" or the drop down menu "Object>Collections>Remove from All Unlinked Collections" in the 3D viewport seems to remove the selected objects from all collections, not just the unlinked ones as the action suggests.

I am asking is this a bug or working as intended as part of efforts in completing #75511.

**System Information:** Operating system: NA Graphics card: NA **Blender Version:** Broken: Blender 2.83 a68bd94d110a Worked: Unsure **Short description of error:** Using the keyboard shortcut "Shift-Ctrl-Alt-G" or the drop down menu "Object>Collections>Remove from All Unlinked Collections" in the 3D viewport seems to remove the selected objects from all collections, not just the unlinked ones as the action suggests. I am asking is this a bug or working as intended as part of efforts in completing #75511.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by blender/blender@0fbcb824d0

This issue was referenced by blender/blender@0fbcb824d0ff1673ad186055a472b977406fb61d
Philipp Oeser self-assigned this 2020-04-23 10:48:55 +02:00
Author
Member

@lichtwerk. Thanks for updating that for me. I will check it out once a daily build for that patch is out then I will make the changes to the documentation.

@lichtwerk. Thanks for updating that for me. I will check it out once a daily build for that patch is out then I will make the changes to the documentation.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Documentation updated in rBM6561

Documentation updated in rBM6561
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#76014
No description provided.